# giovanni

./: Cargo.toml  config.sh  sqlite:data.db
.trash/_commands/: game.rs
.trash/_replay/: metadata.rs  mod.rs  replay.rs
src/: commands.rs  database.rs  main.rs  palette.rs  prelude.rs
src/commands/: game.rs  mod.rs  palette.rs
