[package]
name = "rust-gio-bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = { git = "https://github.com/kangalioo/poise" }
tokio  = { version = "1.12", features = ["full"]}
rand = "0.8.4"
urlencoding = "1.0"